Change type just to make swaggo happy. Insane.
