# docs/swagger.json
@@ -29,7 +29,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_controllers.PermissionTokenRequest"
+                            "$ref": "#/definitions/controllers.PermissionTokenRequest"
                         }
                     }
                 ],
@@ -37,7 +37,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_controllers.PermissionTokenResponse"
+                            "$ref": "#/definitions/controllers.PermissionTokenResponse"
                         }
                     }
                 }
@@ -45,24 +45,27 @@
         }
     },
     "definitions": {
-        "big.Int": {
-            "type": "object"
-        },
-        "github_com_DIMO-Network_token-exchange-api_internal_controllers.PermissionTokenRequest": {
-            "type": "object"
-        },
-        "github_com_DIMO-Network_token-exchange-api_internal_controllers.PermissionTokenResponse": {
+        "controllers.PermissionTokenRequest": {
             "type": "object",
             "properties": {
-                "token": {
+                "nftContractAddress": {
+                    "description": "NFTContractAddress is the address of the NFT contract. Privileges will be checked\non-chain at this address.",
                     "type": "string"
+                },
+                "privileges": {
+                    "description": "Privileges is a list of the desired privileges. It must not be empty.",
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "tokenId": {
+                    "description": "TokenID is the NFT token id.",
+                    "type": "integer"
                 }
             }
         },
-        "internal_controllers.PermissionTokenRequest": {
-            "type": "object"
-        },
-        "internal_controllers.PermissionTokenResponse": {
+        "controllers.PermissionTokenResponse": {
             "type": "object",
             "properties": {
                 "token": {
